--- a/res/layout/maintab.xml
+++ b/res/layout/maintab.xml
@@ -10,7 +10,7 @@
     android:orientation="vertical"
     tools:context="com.example.mytest.MainActivity" >
 
-    <LinearLayout android:id="@+id/Layout_top"  
+    <!-- <LinearLayout android:id="@+id/Layout_top"  
         android:layout_width="wrap_content"  
         android:layout_height="wrap_content"  
         android:orientation="horizontal">  
@@ -40,5 +40,10 @@
             android:layout_width="fill_parent"  
             android:layout_height="wrap_content"
     		android:id="@+id/kuanTextView1"
-            /> 
+            /> -->
+    <com.baidu.mapapi.map.MapView  
+	    android:id="@+id/bmapView"  
+	    android:layout_width="fill_parent"  
+	    android:layout_height="fill_parent"  
+	    android:clickable="true" /> 
 </LinearLayout>
