--- a/res/layout/fingertab.xml
+++ b/res/layout/fingertab.xml
@@ -1,17 +1,57 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:gravity="center|center_horizontal|center_vertical"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
     android:orientation="vertical" >
-
+    
+    
     <com.baidu.mapapi.map.MapView  
 	    android:id="@+id/bmapViewfinger"  
 	    android:layout_width="fill_parent"  
 	    android:layout_height="fill_parent"  
 	    android:clickable="true" /> 
-</LinearLayout>
+	<RelativeLayout
+        android:id="@+id/ControlView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentRight="true"
+        android:layout_marginBottom="20.0dip"
+        android:layout_marginTop="20.0dip"
+        android:layout_marginRight="5.0dip" >
+
+        <Button
+	        android:id="@+id/btnNew"
+	        android:layout_width="wrap_content"
+	        android:layout_height="wrap_content"
+	        android:layout_marginTop="10dip"
+	        android:layout_marginBottom="10dip"
+	        android:text="新增" />
+        
+        <Button
+	        android:id="@+id/btnStart"
+	        android:layout_width="wrap_content"
+	        android:layout_height="wrap_content"
+	        android:layout_marginTop="60dip"
+	        android:layout_marginBottom="10dip"
+	        android:text="开始" />
+        
+        
+        <Button
+	        android:id="@+id/btnReset"
+	        android:layout_width="wrap_content"
+	        android:layout_height="wrap_content"
+	        android:layout_marginTop="110dip"
+	        android:layout_marginBottom="10dip"
+	        android:text="重置" />
+        
+        
+        <Button
+	        android:id="@+id/btnCluster"
+	        android:layout_width="wrap_content"
+	        android:layout_height="wrap_content"
+	        android:layout_marginTop="160dip"
+	        android:layout_marginBottom="10dip"
+	        android:text="分类" />
+    </RelativeLayout>
+	
+</RelativeLayout>
