--- a/res/layout/maintab.xml
+++ b/res/layout/maintab.xml
@@ -1,14 +1,7 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:gravity="center|center_horizontal|center_vertical"
-    android:orientation="vertical"
-    tools:context="com.example.mytest.MainActivity" >
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:orientation="vertical" >
 
     <!-- <LinearLayout android:id="@+id/Layout_top"  
         android:layout_width="wrap_content"  
@@ -46,4 +39,31 @@
 	    android:layout_width="fill_parent"  
 	    android:layout_height="fill_parent"  
 	    android:clickable="true" /> 
-</LinearLayout>
+	    <RelativeLayout
+	        android:id="@+id/ControlView"
+	        android:layout_width="wrap_content"
+	        android:layout_height="wrap_content"
+	        android:layout_alignParentTop="true"
+	        android:layout_alignParentRight="true"
+	        android:layout_marginBottom="20.0dip"
+	        android:layout_marginTop="20.0dip"
+	        android:layout_marginRight="5.0dip" >
+        <Button
+	        android:id="@+id/btnLocation"
+	        android:layout_width="wrap_content"
+	        android:layout_height="wrap_content"
+	        android:layout_marginTop="10dip"
+	        android:layout_marginBottom="10dip"
+	        android:text="定位" />
+        
+        <Button
+	        android:id="@+id/btnStop"
+	        android:layout_width="wrap_content"
+	        android:layout_height="wrap_content"
+	        android:layout_marginTop="60dip"
+	        android:layout_marginBottom="10dip"
+	        android:text="停止" />
+	        
+		</RelativeLayout>
+	        
+</RelativeLayout>
