--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -30,7 +30,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_centerHorizontal="true"
-                    android:src="@drawable/btn_know_nor" 
+                    android:src="@drawable/btn_location_nor" 
                     android:contentDescription="@null"/>
 
                 <TextView
@@ -56,7 +56,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_centerHorizontal="true"
-                    android:src="@drawable/btn_my_nor"
+                    android:src="@drawable/btn_finger_nor"
                     android:contentDescription="@null" />
                 
 
@@ -83,7 +83,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_centerHorizontal="true"
-                    android:src="@drawable/btn_my_nor"
+                    android:src="@drawable/btn_collect_nor"
                     android:contentDescription="@null" />
                 
 
@@ -110,7 +110,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_centerHorizontal="true"
-                    android:src="@drawable/btn_wantknow_nor"
+                    android:src="@drawable/btn_setting_nor"
                     android:contentDescription="@null" />
 
                 <TextView
