--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -2,7 +2,7 @@
 <resources>
 
     <color name="topbar_bg">#b6292d</color>
-    <color name="bottomtab_normal">#c8bca5</color>
-    <color name="bottomtab_press">#8b572a</color>
-<color name="line">#c8bca5</color>
+    <color name="bottomtab_normal">#a2a1a1</color>
+    <color name="bottomtab_press">#2f6fa8</color>
+<color name="line">#a2a1a1</color>
 </resources>
