--- a/res/layout/maintab.xml
+++ b/res/layout/maintab.xml
@@ -46,7 +46,7 @@
 	        android:layout_alignParentTop="true"
 	        android:layout_alignParentRight="true"
 	        android:layout_marginBottom="20.0dip"
-	        android:layout_marginTop="20.0dip"
+	        android:layout_marginTop="10.0dip"
 	        android:layout_marginRight="5.0dip" >
         <Button
 	        android:id="@+id/btnLocation"
@@ -56,11 +56,29 @@
 	        android:layout_marginBottom="10dip"
 	        android:text="定位" />
         
+        
+        <Button
+	        android:id="@+id/btnContinue"
+	        android:layout_width="wrap_content"
+	        android:layout_height="wrap_content"
+	        android:layout_marginTop="60dip"
+	        android:layout_marginBottom="10dip"
+	        android:text="连续" />
+        
+        
+        <Button
+	        android:id="@+id/btnLab"
+	        android:layout_width="wrap_content"
+	        android:layout_height="wrap_content"
+	        android:layout_marginTop="110dip"
+	        android:layout_marginBottom="10dip"
+	        android:text="实验" />
+        
         <Button
 	        android:id="@+id/btnStop"
 	        android:layout_width="wrap_content"
 	        android:layout_height="wrap_content"
-	        android:layout_marginTop="60dip"
+	        android:layout_marginTop="160dip"
 	        android:layout_marginBottom="10dip"
 	        android:text="停止" />
 	        
