--- a/res/layout/settingtab.xml
+++ b/res/layout/settingtab.xml
@@ -105,6 +105,47 @@
 	       </EditText>
 	</AbsoluteLayout>
 	
+    <!-- 其他设置 -->
+	<LinearLayout  
+        android:layout_width="match_parent"  
+        android:layout_height="wrap_content"  
+        android:orientation="vertical"  
+        android:paddingBottom="5dp"  
+        android:paddingLeft="25dp"  
+        android:paddingTop="15dp" >  
+  
+        <TextView  
+            android:layout_width="wrap_content"  
+            android:layout_height="wrap_content"  
+            android:text="@string/setting_tab_other"  
+            android:textColor="@color/black" />  
+            
+    </LinearLayout>
+    
+    <View
+	  android:layout_width="fill_parent"
+	  android:layout_height="2dip"
+	  android:background="#FF000000"/>
+    
+    <AbsoluteLayout
+	  android:layout_width="wrap_content"
+	  android:layout_height="wrap_content">
+	  
+	  <TextView 
+	       android:layout_width="wrap_content" 
+	       android:text="楼层:" 
+	       android:layout_height="wrap_content" 
+	       android:layout_y="20dip" 
+	       android:layout_x="50dip">
+	       </TextView>
+	   <EditText
+	       android:layout_width="100px" 
+	       android:layout_height="wrap_content" 
+	       android:id="@+id/etFloor" 
+	       android:layout_y="10dip" 
+	       android:layout_x="120dip">
+	       </EditText>
+	</AbsoluteLayout>
 	<!-- 操作按钮 -->
 
     <LinearLayout  
